fix left panel overlap

--- a/client/src/style/css/common/filter-header.css
+++ b/client/src/style/css/common/filter-header.css
@@ -2,8 +2,9 @@
 .filter-header {
   padding: 14px 15px;
   border-bottom: 1px solid #EBEFF2;
+  background-color: white;
 }
-/* line 5, ../../sass/common/filter-header.scss */
+/* line 6, ../../sass/common/filter-header.scss */
 .filter-header__list {
   display: flex;
   background: #F0F2F5;
@@ -13,7 +14,7 @@
   padding: 0;
   list-style: none;
 }
-/* line 15, ../../sass/common/filter-header.scss */
+/* line 16, ../../sass/common/filter-header.scss */
 .filter-header__item {
   flex: 1 0 auto;
   font: 400 14px/21px 'Poppins';
@@ -22,7 +23,7 @@
   border-radius: 6px;
   position: relative;
 }
-/* line 25, ../../sass/common/filter-header.scss */
+/* line 26, ../../sass/common/filter-header.scss */
 .filter-header__item_current::after {
   content: '';
   position: absolute;
@@ -35,13 +36,13 @@
   border-radius: 6px;
   pointer-events: none;
 }
-/* line 38, ../../sass/common/filter-header.scss */
+/* line 39, ../../sass/common/filter-header.scss */
 .filter-header__item_current .filter-header__link {
   color: #323C47;
   background: #fff;
   border-radius: 5px;
 }
-/* line 46, ../../sass/common/filter-header.scss */
+/* line 47, ../../sass/common/filter-header.scss */
 .filter-header__link {
   position: relative;
   z-index: 10;
